# anchor

./: .gitignore  DEPLOY_RENDER.md  Makefile  README.md  README_EXTENDED.md  SETUP.md  docker-compose.yml  modal_app.py  modal_queue.py  pyproject.toml  render.yaml  requirements.txt
config/: README.md  __init__.py  demo_placeholder.json  demo_placeholder.py  graph.py  graph_policy.py  settings.py
db/: bootstrap_supabase.sql  drop_signup_trigger.sql  repair_households_users.sql  run_migrations_011_012_013.sql
docs/: ANCHOR_STYLE_GUIDE.md  COHESION_CHECKLIST.md  COHESION_COMMIT_PLAN.md  COHESION_PLAN.md  CONNECTORS.md  DATA_AND_NEXT_STEPS.md  DEMO_MOMENTS.md  FRONTEND_RESTRUCTURE_AUDIT.md  GNN_PRODUCT_LOOP_AUDIT.md  INTEGRATION_MAP.md  MODAL_QUEUE.md  NEO4J_SETUP.md  PRODUCTION_OUTREACH.md  QUICKSTART_ALERTS.md  QUICKSTART_API.md  RETRAIN.md  SEED_DATA.md  SETUP_CHECKLIST.md  SUPABASE_SETUP.md  UPGRADE_PLAN.md  WHITEPAPER_CHECKLIST.md  agents.md  api_ui_contracts.md  event_packet_spec.md  frontend_notes.md  modal_training.md  schema.md  supabase-setup.md
ml/: __init__.py  config.py  export_whitepaper_artifacts.py  inference.py  modal_structured_sweep.py  modal_train.py  modal_train_elliptic.py  registry.py  run_utils.py  train.py  train_elliptic.py
scripts/: analyze_structural_significance.py  build_demo_fixtures.py  consolidate_sweep_seeds.py  demo_replay.py  enable_alerts_setup.py  export_supabase_for_gnn.py  generate_elderly_conversations.py  generate_foreign_dataset.py  load_elderly_conversations.py  run_agent_cron.py  run_api.sh  run_financial_agent_demo.py  (+11 more)
(+324 files in other folders)
