[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor"
version = "0.1.0"
description = "Anchor: Independence Graph backend + ML pipeline for edge voice companion"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "supabase>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    "langchain>=0.1.0",
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "modal>=0.64.0",
]

[project.optional-dependencies]
ml = [
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "ml*", "db*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps/api/tests", "apps/worker/tests", "ml/tests"]
